--- a/style.css
+++ b/style.css
@@ -11,3 +11,83 @@ body{
     font-size:20px;
     font-weight: bold;
 }
+p{
+    font-size:14px;
+}
+h2{
+    font-weight:bold;
+    font-size:22px;
+    margin-bottom:20px;
+}
+a.font-black{
+    color:#000 !important;
+
+}
+ body{
+     height:20vh;
+     justify-content:top;
+     align-items:center;
+ }
+/******
+ABOUT
+******/
+#about{
+    margin:60px auto;
+    max-width:400px;
+    text-align:center;
+}
+#about img{
+    border-radius:50%;
+    width:120px;
+    height:120px;
+}
+#about.name{
+    font-size:20px;
+
+}
+
+#about .vocation{
+    font-size:15px;
+    color: #A8A8AB;
+    margin-bottom:10px;
+}
+
+#about .skills{
+    font-size:14px;
+    color:#00ABAE;
+    margin-bottom:10px;
+}
+#about .email{
+    margin-top:15px;
+    font-size:14px;
+
+}
+#about .icon{
+    margin-top:20px;
+    font-size: 30px;
+}
+ #about .icon a{
+     color: #000;
+ }
+
+
+ /*******
+ project
+ *******/
+
+ #project{
+     margin:60px auto;
+     width:80;
+    
+ }
+
+ #project h2{
+     text-align: center;
+ }
+
+ #project.card img{
+     width:100%;
+ }
+ #project.card-title{
+     font-weight:bold;
+ }
